deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-api-deployment
spec:
  selector:
    matchLabels:
      app: golang
  replicas: 1 # tells deployment to run 1 pods matching the template
  template:
    metadata:
      labels:
        app: golang
    spec:
      containers:
        - name: golang-api
          image: ghcr.io/grip-api-test/golang-api:nightly@sha256:ecd422d302a1d0d73d1c60a83e08127bdc46c0ae827f53eaa59ba637387a4bc5
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 800Mi
              cpu: "0.2"
            limits:
              memory: 800Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: golang-api-svc
spec:
  selector:
    app: golang
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
