deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.to/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
 
spec:
  ingressClassName: alb
  rules:
  - host: golang.dev.osil.grip.volkswagen.de
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: golang-api-svc
            port:
              number: 8080
